--- a/AWS_Website/www_static/A1/webrtc/sharing-presenter.html
+++ b/AWS_Website/www_static/A1/webrtc/sharing-presenter.html
@@ -15,7 +15,16 @@ video {
 </style>
 <script>
 // DUPLICATE SOCKET
-var socket = io.connect(document.location.hostname + ':' + location.port);
+
+var socket;
+
+if(typeof parent.socket != "undefined") {
+	socket = parent.socket
+}
+else {
+	socket = io.connect(document.location.hostname + ':' + location.port);
+}
+
 var MODERATOR_CHANNEL_ID = 'slite-screen'; // channel-id
 var MODERATOR_SESSION_ID = '<%= hash %>-screen';    // room-id
 var MODERATOR_ID         = '<%= userId%>';    // user-id
