--- a/AWS_Website/www_static/video/index.html
+++ b/AWS_Website/www_static/video/index.html
@@ -23,7 +23,7 @@
   <script src="https://media.twiliocdn.com/sdk/js/common/v0.1/twilio-common.min.js"></script>
   <script src="https://media.twiliocdn.com/sdk/js/conversations/v0.11/twilio-conversations.min.js"></script>
   <script>
-  var accessToken = "<%= token %>";
+  var accessToken = '<%= token %>';
   </script>
   <script src="quickstart.js"></script>
   </body>
