Added remote app + Added access key for presentation

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -263,6 +263,7 @@
 				  <li><a href="javascript:downloadPresentation()" id="downloadPresentation">Download Presentation</a></li>
 				  <!--<li><a href="javascript:showHideInsertVideoSlideOverlay()" id="menuInsertVideoSlide">Insert Video Slide</a></li>-->
 				  <li><a href="javascript:showHidePasswordCreateOverlay()" id="menuPassword">Protect With Password</a></li>
+				  <li><a href="javascript:getPresentationKey()" id="menuPresKey">Get presentation key</a></li>
 				  <li><a href="/#myPres" id="shareTwitter">My Presentations</a></li>
 				  <li><a href="/">Home</a></li>
 				  <li><a href="javascript:showHideRenamePresentationOverlay()" id="menuRenamePresentation">Rename ($Payed)</a></li>
