Final mobile app

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -79,6 +79,7 @@
 					<span style="font-size:2em; vertical-align:top; float:right; padding-right:30px; padding-left:10px;">&gt;</span>
 					<span style="vertical-align:top; float:right">NEXT</span>
 			</div>
+			<div class="UI button button_unpressed" id="backButtonMobile" style="display: none" onclick="location.href='/app/remote/'">BACK</div>
 			<!--<span class="UI" id="timeDisplay">start &#8986;</span>--><br>
 	</div>
 
