--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -157,6 +157,11 @@
 		<iframe src="../A1/help.html" style='width:100%;height:100%'></iframe>
 	</div>
 
+	<div class='presPassOverlay' id='presPassOverlay'>
+		<div class="closevideo" id="closePassOverlay" style='margin-right:30px;' title="Close Video"></div>
+		<div id="getPassResult" class="centerText"></div>
+	</div>
+	
 
 	<div class='renamePresentationOverlay' id='renamePresentationOverlay'>
 		<div class="closevideo" id="closeRenamePresentationOverlay" style='margin-right:30px;'></div>
