--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -115,7 +115,7 @@
 
         <div class="title col-xs-12" style="position: absolute; top: 20%;">
 			<center>
-				<div style="font-size: 10vw; color: #000061">
+				<div style="color: #000061" class="mainLogo">
 					PRE<span style='color:red'>Z</span>ERA
 				</div>
 			</center>
