--- a/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/index.html
+++ b/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/index.html
@@ -2,57 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8" content="user-scalable=yes">
-        <meta name="viewport" content="user-scalable=no" />
+        <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no' />
             <title>PRESENTATION REMOTE CONTROL</title>
-            <link rel="stylesheet" type="text/css" href="./css/index.css">
-                <script src="https://www.prezera.com/socket.io/socket.io.js"></script>
-                <script type="text/javascript" src="cordova.js"></script>
-                <script src="./js/jquery-2.0.3.min.js"></script>
-                <script src="./js/speechRecognizer.js"></script>
-                <script src="./js/volumeButtonControl.js"></script>
-                <script src="./js/shake.js"></script>
-                <script src="./js/notes.js"></script>
-                <script defer src="./js/timer.js"></script>
-                <script defer src="./js/slite.js"></script>
-                <script src="./js/thumbs.0.6.0.min.js"></script>
-
-                <script>
-                    var socket = io.connect('https://www.prezera.com/');
-                    </script>
 
                 </head>
-    <body onload="startup()">
+    <body style="padding:0px;margin:0px;">
 
-        <div class="UI topRow leftCol" id="menu" style="display: none">&nbsp;</div>
-        <div class="UI topRow rightCol" id="timeDisplay"  style="display: none">Start Timer</div>
-        <!--<div class="UI midRow leftCol" id="notes"  style="display: none">1: Beginning slide, or should I say 'slite'. Get ready to see powerpoint with all the powers of the web.</div>-->
-
-        <div style="widht: 100%; height: 100%; text-align: center">
-            <div id="URLBox">prezera.com/<input type="text" id="URLSlides" value="EnterCodeHere"></div>
-            <div id="currentSlide" onclick="void(0)" style="height: 65%; width: 80%; display: inline-block;">
-                <div id="overlay"></div>
-                <iframe id="theIframe" class="frame" src="https://www.prezera.com/EnterCodeHere" seamless></iframe>
-            </div>
-        </div>
-
-
-        <div class="UI midRow rightCol" id="otherSlides"  style="display: none">
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-        </div>
-
-
-        <div class="buttons_div">
-            <div class="buttons_off buttons" id="prev"><center>PREV</center></div>
-            <div class="buttons_off buttons" id="laser"><center>LASER</center></div>
-            <div class="buttons_off buttons" id="draw"><center>DRAW</center></div >
-            <!--<div class="buttons_off buttons" id="speech"><center>SPEAK</center></div>-->
-            <div class="buttons_off buttons" id="next"><center>NEXT</center></div>
-        </div>
+        <iframe src="https://www.prezera.com/app/remote" style='position:absolute;width:100%;height:100%;border:none'/>
 
     </body>
 </html>
