--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="web presentations, web presentation, presentation, powerpoint, free, free online presentation, free presentation, slide, slides, free slides, powerpoint replacement">
   <meta content="https://www.prezera.com" property="og:url" />
     <meta content="https://www.prezera.com/img/logo.png" property="og:image" />
-    <link rel="shortcut icon" id="favicon" href="img/favicon.ico">
+    <link rel="shortcut icon" id="favicon" href="./img/UberGuestlistFavicon.png">
     <meta name="author" content="PREZERA inc.">
     <link rel="canonical" href="https://www.prezera.com" />
 	<meta name="viewport" content="width=device-width, initial-scale=0.9">
