--- a/AWS_Website/www_static/app/remote/index.html
+++ b/AWS_Website/www_static/app/remote/index.html
@@ -109,7 +109,7 @@
                 <form role="form" id="pres_login">
                     <div class="form-group">
                         <h3>Presentation ID</h3>
-                        <input id="pres_id" class="form-control" placeholder="Enter presentation ID">
+                        <input id="pres_id" class="form-control" placeholder="Enter presentation ID" style="text-transform: lowercase;">
                     </div>
                     <div class="form-group">
                         <h3>Presentation password</h3>
