--- a/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/index.html
+++ b/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/index.html
@@ -4,11 +4,12 @@
         <meta charset="utf-8" content="user-scalable=yes">
         <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no' />
             <title>PRESENTATION REMOTE CONTROL</title>
+            <meta http-equiv="refresh" content="0; url=https://www.prezera.com/app/remote" />
 
                 </head>
     <body style="padding:0px;margin:0px;">
 
-        <iframe src="https://www.prezera.com/app/remote" style='position:absolute;width:100%;height:100%;border:none'/>
+
 
     </body>
 </html>
